--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/SD-Calculator/FileContentIndex/e7dbc509-6cee-4459-8bbf-be07fff50314.vsidx
+/.vs/SD-Calculator/FileContentIndex/cde1bf07-ed69-480c-9be2-d70f7eb42c75.vsidx
